--- a/dotcloud.yml
+++ b/dotcloud.yml
@@ -4,6 +4,7 @@ worker:
   ports:
     smpt: tcp
     pop3: tcp
+  process: bin/twistd -ny twemail.tac
   systempackages:
     - python
     - python-pip
