--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,4 +1,4 @@
 [supervisorctl]
 [program:twisted]
-command = bin/twistd -ny twemail.tac
+command = ~/bin/twistd -ny twemail.tac
 directory = /home/dotcloud/
